--- a/sections/cart-main.liquid
+++ b/sections/cart-main.liquid
@@ -9,7 +9,7 @@
               {%- for item in cart.items -%}
                 <div class="row align-items-center mb-3 pb-3 {% unless forloop.last %}border-bottom{% endunless %} cart-item" data-key="{{ item.key }}">
                   <div class="col-md-2 col-4">
-                    <img class="img-fluid rounded" src="{{ item.image | image_url: width: 100 }}" alt="{{ item.product.title }}">
+                    <img class="img-fluid rounded" src="{{ item.image | image_url: width: 100 }}" alt="{{ item.product.title }}" width="100" height="100">
                   </div>
                   <div class="col-md-4 col-8">
                     <h5 class="mb-0">{{ item.product.title }}</h5>
